--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -2,7 +2,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="#">LITEREVU</a>
+        <a class="navbar-brand fw-bold" href="#">
+            <h1>LITEREVU</h1>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
